# sentense-transformer-jupyter-uv

./: .gitignore  README.md  pyproject.toml  sentence_transformers_basic.ipynb  sentence_transformers_tutorial.ipynb  set-github-remote.sh  similarity-algorythms.md
sample_texts/: business.txt  cooking.txt  programming.txt  science.txt  travel.txt
