[project]
name = "sentence-transformers-example"
version = "0.1.0"
description = "A simple example to get started with sentence transformers in Jupyter Lab"
requires-python = ">=3.8"
dependencies = [
    "sentence-transformers>=2.2.2",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "plotly>=5.0.0",
    "wordcloud>=1.9.0",
]

[tool.uv]
dev-dependencies = []

[project.optional-dependencies]
dev = []